<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.daniel.roll20.CreateCharacterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/characterName"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:hint="@string/characterName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dnDClass"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/dnDClass"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/background"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/background"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/race"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/race"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/alignment"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/alignment"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/strength"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/strength"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dexterity"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/dexterity"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/constitution"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/constitution"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/intelligence"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/intelligence"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/wisdom"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/wisdom"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/charisma"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/charisma"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/armourClass"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/aroumrClass"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/speed"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/speed"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/hitPoints"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/hitPoints"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/level"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/level"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/xp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/xp"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/proficiencyBonus"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/proficienyBonus"
                android:inputType="number"
                android:textSize="14sp" />

            <Button
                android:id="@+id/SaveCharacterButton"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="createAndSaveCharacter"
                android:text="@string/save_character"
                app:layout_anchorGravity="center_vertical|center_horizontal" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
