<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="com.example.daniel.rollwithit.fragments.DiceRollerFragment">

    <EditText
        android:id="@+id/number_of_die"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/numberOne"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/type_of_die"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/d4Dice"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/modifier_value"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/numberZero"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/roll_button"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/roll_result"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/roll_result"
        android:textIsSelectable="false" />
</LinearLayout>
