<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.daniel.rollwithit.fragments.CharacterDetailsFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/dnd_class_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/dndClass"
            android:textIsSelectable="false"
            android:typeface="sans" />

        <TextView
            android:id="@+id/race_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/race"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/background_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/background"
            android:textIsSelectable="false" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/alignment_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/alignment"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/xp_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/xp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/player_name_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/playerName"
            android:textIsSelectable="false" />


    </TableRow>
</TableLayout>
