<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/dndClass"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/NumberOfDiceShorthand"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/characterName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/die"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/modifier"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/playerName1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/playerNames"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/results"
        android:textIsSelectable="false" />


</LinearLayout>