<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.daniel.roll20.RollerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/RollButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="rollDice"
            android:text="@string/roll_button"
            app:layout_anchorGravity="center_vertical|center_horizontal" />

        <EditText
            android:id="@+id/numberOfRolls"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_above="@+id/RollButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:hint="@string/number_of_rolls"
            android:inputType="number"
            android:textAlignment="viewStart" />

        <Spinner
            android:id="@+id/dice_spinner"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_above="@+id/RollButton"
            android:layout_toEndOf="@+id/numberOfRolls"
            android:layout_toRightOf="@+id/numberOfRolls" />

        <TextView
            android:id="@+id/roll_result"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_below="@+id/RollButton"
            android:layout_centerHorizontal="true"
            android:hint="@string/roll_result"
            android:textAlignment="center" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
